# ngen

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  readme.md
core/: CMakeLists.txt
core/application/: CMakeLists.txt
core/application/include/: application.h  application_info.h  ikeyboard_handler.h
core/application/src/: application.cpp
core/application/test/: CMakeLists.txt  test_application.cpp
core/memory/: .gitignore  CMakeLists.txt  readme.md
core/memory/include/: heap_allocator.h  memory.h
core/memory/src/: heap_allocator.cpp  memory.cpp
core/memory/test/: CMakeLists.txt  test_heap_allocator.cpp
core/rendering/: CMakeLists.txt  readme.md
core/rendering/display/: CMakeLists.txt
core/rendering/display/include/: camera_args.h  camera_type.h  display_pipeline.h  display_port.h  display_provider.h  material_request.h  render_args.h  render_layer.h  request_page.h  request_provider.h  request_queue.h
core/rendering/display/src/: display_pipeline.cpp  display_port.cpp  display_provider.cpp  material_request.cpp  render_layer.cpp  request_provider.cpp
core/rendering/display/test/: CMakeLists.txt  test_display_port.cpp  test_display_provider.cpp  test_render_layer.cpp  test_request_provider.cpp
core/rendering/include/ngen/renderer/: draw_request.h  layer_desc.h  render_args.h.h  surface_format.h
core/rendering/ngen_opengl/: CMakeLists.txt
core/rendering/ngen_opengl/include/: buffer_object.h  geometry.h  material.h  program.h  program_factory.h  shader.h  state_manager.h  state_value.h  texture.h
core/rendering/ngen_opengl/src/: buffer_object.cpp  material.cpp  program.cpp  program_factory.cpp  shader.cpp  state_manager.cpp  texture.cpp
core/rendering/ngen_opengl/test/: CMakeLists.txt  test_program_factory.cpp  test_texture.cpp
core/rendering/render_layer/: CMakeLists.txt  readme.md
core/rendering/render_layer/include/: material_request.h  render_layer.h
core/rendering/render_layer/src/: render_layer.cpp
core/rendering/render_layer/test/: CMakeLists.txt  test_render_layer.cpp
core/udp/include/: incoming_udp.h  outgoing_udp.h  socket_buffer.h  udp_base.h
core/udp/source/: incoming_udp.cpp  outgoing_udp.cpp  udp_base.cpp
core/users/: CMakeLists.txt
core/users/include/: user.h  user_info.h  user_list.h
core/users/source/: user_info.cpp  user_list.cpp
core/users/test/: CMakeLists.txt  test_user_info.cpp  test_user_list.cpp
examples/: CMakeLists.txt
examples/src/: example.cpp
highlevel/: CMakeLists.txt  readme.md
highlevel/game_state/: .gitignore  CMakeLists.txt  readme.md
highlevel/game_state/include/: game_system.h  game_system_factory.h  game_system_ref.h  init_args.h  state_description.h  state_system.h  system_crc.h
highlevel/game_state/src/: game_system.cpp  game_system_factory.cpp  state_system.cpp
highlevel/game_state/test/: CMakeLists.txt  test_game_system_factory.cpp  test_state_system.cpp
highlevel/json_writer/: .gitignore  CMakeLists.txt  readme.md
highlevel/json_writer/include/: json_writer.h
highlevel/json_writer/source/: json_writer.cpp
highlevel/json_writer/test/: CMakeLists.txt  test_json_writer.cpp
include/ngen/: ngen_assert.h
include/ngen/renderer/: blend_func.h  blend_mode.h  draw_request.h  layer_desc.h  material_desc.h  render_args.h  texture_desc.h  texture_type.h
lowlevel/: CMakeLists.txt
lowlevel/commerce/: CMakeLists.txt  readme.md
lowlevel/commerce/include/: store.h
lowlevel/commerce/src/: store.cpp
lowlevel/commerce/test/: CMakeLists.txt  test_store.cpp
platform/sockets/include/: sockets.h
provisioner/source/: provisioner.js  server.js
